--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,12 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  flutter_launcher_icons: ^0.13.1
 
+
+flutter_icons:
+  android: true
+  image_path: images/instagram_logo.png
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -60,7 +65,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - assets/
+     - images/
     #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -77,7 +82,7 @@ flutter:
   fonts:
      - family: Schyler
        fonts:
-         - asset: assets/TiltPrism-Regular.ttf
+         - asset: fonts/TiltPrism-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
