--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,9 +85,9 @@ flutter:
          - asset: fonts/TiltPrism-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
+     - family: shy
+       fonts:
+         - asset: fonts/Shy.otf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
